modify schema of /crescore response
